--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,11 @@
 <project name="razz" default="compile" basedir=".">
 
 <target name="compile" >
+  <javac srcdir="." destdir="build" />
+</target>
+
+<target name="run" >
 
 </target>
+
 </project>
